--- a/frontend/templates/page3.html
+++ b/frontend/templates/page3.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
+<script src="/static/app.js"></script>
+<!--<script>-->
+<!--    // Reseta o consentimento toda vez que o app inicia-->
+<!--    localStorage.removeItem("consentGiven");-->
+<!--</script>-->
 <h2>Pag 3 - Ver resultados DB</h2>
 <p>This is the content of Page 3.</p>
 {% endblock %}
