--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -3,18 +3,14 @@
 {% block content %}
 <div class="centered-container">
     <h2>Ferramenta para Detectar Patologias na Voz</h2>
-    <p>Clique em um dos botões para ser direcionado à página desejada:</p>
+    <p>Selecione a opção desejada:</p>
     <div class="button-list">
         <button onclick="location.href='/page1'">Carregar áudio</button>
         <button onclick="location.href='/page2'">Gravar áudio</button>
         <button onclick="location.href='/page3'">Resultados DB</button>
         <button onclick="location.href='/page4'">Tutorial</button>
-        <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/consent';">
-                Visualizar Termo
-        </button>
-        <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/';">
-                Sair
-        </button>
+        <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/consent';">Visualizar Termo</button>
+        <button onclick="localStorage.removeItem('consentGiven'); window.location.href='/';">Sair</button>
 
     </div>
 </div>
