--- a/frontend/templates/page2.html
+++ b/frontend/templates/page2.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <meta charset="UTF-8">
-<!--<div id="result">Aguarde enquanto processamos o arquivo...</div> -->
+<div id="result">...</div>
 <!-- Contêiner onde a tabela será inserida -->
 <div id="tabela-resultados"></div>
 <div id="tabela-resultados_fft"></div>
@@ -208,10 +208,15 @@
             const formData = new FormData();
             formData.append("file", wavFile);
 
+            const userInfo = localStorage.getItem("userInfo") || "{}"; // Carrega dados do usuário
+
             const response = await fetch("/start-analysis", {
                 method: "POST",
                 body: formData,
-            });
+                headers: {
+                            "x-user-info": userInfo
+                        }
+                });
 
             const resultDiv = document.getElementById("result");
             const fftPlot = document.getElementById("fft-plot");
