--- a/frontend/templates/page1.html
+++ b/frontend/templates/page1.html
@@ -139,7 +139,7 @@
                                         <p>Shimmer (dda): ${data.ddaShimmer.toFixed(4)}</p>
                                         <p>Fundamental Frequency: ${data.fundamental_frequency.toFixed(4)}</p>
                                         <p>HNR: ${data.hnr.toFixed(4)}</p>`;
-        fftPlot.style.display = "block";
+<!--        fftPlot.style.display = "block";-->
         fftPlotly.style.display = "block";
 
         const results = data.frequencies.map((freq, i) => ({
@@ -147,11 +147,20 @@
             amp: data.amplitudes[i].toFixed(2)
         }));
 
-        const results2 = [
-            { metrica: "Jitter (ppq5)", valor: data.jitter, unid: "%" },
-            { metrica: "Shimmer (apq3)", valor: data.shimmer,unid: "%" },
-            { metrica: "Frequência Fundamental (Hz)", valor: data.fundamental_frequency, unid: "Hz" },
-            { metrica: "HNR", valor: data.hnr, unid: "%" }
+             const results2 = [
+                { metrica: "Jitter (local)" , valor: data.localJitter.toFixed(4), unid: "%" },
+                { metrica: "Jitter (local, absolute)", valor: data.localabsoluteJitter.toFixed(4), unid: "s" },
+                { metrica: "Jitter (rap)", valor: data.rapJitter.toFixed(4), unid: "%" },
+                { metrica: "Jitter (ppq5)", valor: data.ppq5Jitter.toFixed(4), unid: "%" },
+                { metrica: "Jitter (ddp)", valor: data.ddpJitter.toFixed(4), unid: "%" },
+                { metrica: "Shimmer (local)", valor: data.localShimmer.toFixed(4), unid: "%" },
+                { metrica: "Shimmer (local, dB)", valor: data.localdbShimmer.toFixed(4), unid: "dB" },
+                { metrica: "Shimmer (apq3)", valor: data.apq3Shimmer.toFixed(4), unid: "%" },
+                { metrica: "Shimmer (apq5)", valor: data.apq5Shimmer.toFixed(4), unid: "%" },
+                { metrica: "Shimmer (apq11)", valor: data.apq11Shimmer.toFixed(4), unid: "%" },
+                { metrica: "Shimmer (dda)", valor: data.ddaShimmer.toFixed(4), unid: "%" },
+                { metrica: "Fundamental Frequency", valor: data.fundamental_frequency.toFixed(4), unid: "Hz" },
+                { metrica: "HNR", valor: data.hnr.toFixed(4), unid: "--" }
         ];
         criarTabela_fft(results);
         criarTabela(results2);
